# supermusr-data-pipeline

./: .gitignore  CMakeCache.txt  Cargo.toml  Containerfile  README.md  cmds.sh  deny.toml  devenv.nix  flake.nix  hdf5.nix  result  rust-toolchain.toml  shell.nix  treefmt.toml
common/: Cargo.toml
common/src/: lib.rs  metrics.rs  spanned.rs  tracer.rs
common/src/tracer/: mod.rs  otel_tracer.rs  propagator.rs  tracer_engine.rs
digitiser-aggregator/: Cargo.toml  README.md  default.nix
digitiser-aggregator/src/: main.rs  spanned_frame.rs
digitiser-aggregator/src/data/: event.rs  mod.rs
digitiser-aggregator/src/frame/: aggregated.rs  cache.rs  mod.rs  partial.rs  spanned_frame.rs
events-to-histogram/: Cargo.toml  Containerfile  README.md  default.nix
events-to-histogram/src/: main.rs  metrics.rs  processing.rs
frame-assembler/: Cargo.toml  Containerfile  README.md
frame-assembler/examples/: config.toml
frame-assembler/src/: buffer.rs  config.rs  event_data.rs  frame.rs  main.rs
kafka-daq-report/: Cargo.toml  README.md  default.nix
kafka-daq-report/src/: app.rs  main.rs  message_debug.rs  ui.rs
kafka-daq-report/src/daq_trace/: app.rs  mod.rs
live-plot/: Cargo.toml  README.md
live-plot/src/: backend.rs  main.rs
nexus-writer/: Cargo.toml  README.md  Readme.md  Test1.nxs  TestRun1.nxs  cmds.sh  default.nix
nexus-writer/docs/: README.md
nexus-writer/runs/: loop.sh  purge.sh
nexus-writer/src/: error.rs  event_message.rs  flush_to_archive.rs  hdf5_writer.rs  kafka_topic_interface.rs  main.rs  message_handlers.rs  metrics.rs  nexus.rs  spanned_run.rs
nexus-writer/src/hdf5_handlers/: attribute.rs  dataset.rs  dataset_flatbuffers.rs  error.rs  group.rs  mod.rs
nexus-writer/src/nexus/: builder.rs  classes.rs  engine.rs  error.rs  event_message.rs  eventlist.rs  hdf5_writer.rs  histogram.rs  logs.rs  mock_nexus_file.rs  mod.rs  nexus_file.rs  run.rs  run_messages.rs  run_parameters.rs  settings.rs  units.rs  writer.rs
nexus-writer/src/nexus_structure/: log.rs  mod.rs  root.rs
nexus-writer/src/run_engine/: engine.rs  mod.rs  run_messages.rs  settings.rs
nexus-writer/src/schematic/: event_data.rs  mod.rs  period.rs  root.rs  runlog.rs  selog.rs
run-simulator/: Cargo.toml  README.md  default.nix
run-simulator/src/: main.rs  runlog.rs  sample_environment.rs
simulator/: Cargo.toml  Containerfile  README.md  data.json  default.nix  jupyter.ipynb  trace.rs
simulator/src/: advanced_trace.rs  channel_trace.rs  defined.rs  json.rs  main.rs  message.rs  muon.rs  muon_event.rs  noise.rs  run_configured.rs  send_messages.rs  simulation_config.rs
simulator/src/integrated/: build_messages.rs  cache.rs  engine.rs  event_list.rs  mod.rs  muon.rs  noise.rs  run_messages.rs  schedule.rs  send_messages.rs  simulation.rs
simulator/src/runs/: alarm.rs  create_messages.rs  mod.rs  runlog.rs  sample_environment.rs
simulator/src/traces/: message.rs  mod.rs  muon_event.rs  noise.rs  run_configured.rs  simulation_config.rs
stream-to-file/: Cargo.toml  Containerfile  default.nix
stream-to-file/src/: main.rs  metrics.rs
stream-to-file/src/file/: base.rs  event.rs  mod.rs  trace.rs
streaming-types/: Cargo.toml  build.rs  default.nix
streaming-types/src/: aev1_frame_assembled_event_v1_generated.rs  dat1_digitizer_analog_trace_v1_generated.rs  dev1_digitizer_event_v1_generated.rs  ecs_6s4t_run_stop_generated.rs  ecs_df12_det_spec_map_generated.rs  ecs_pl72_run_start_generated.rs  frame_metadata.rs  frame_metadata_v1_generated.rs  hst1_histogram_v1_generated.rs  lib.rs  time_conversions.rs  util.rs
tdengine/: Cargo.toml  default.nix  flake.nix
tdengine/src/: error.rs  error_reporter.rs  framedata.rs  lib.rs  tdengine.rs  tdengine_login.rs  tdengine_views.rs  utils.rs
trace-archiver-db/: .env2  Cargo.toml  Dockerfile  README.md  data.csv  default.nix  derivation.nix  docker-compose.yml  run-jupyter.sh  trace-archiver-db.ipynb
trace-archiver-db/.github/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tdengine.yml
trace-archiver-db/.github/workflows/: ci.yml
trace-archiver-db/src/: envfile.rs  error.rs  full_test.rs  main.rs  test.rs  utils.rs
trace-archiver-db/src/benchmarker/: analyser.rs  args.rs  benchmark.rs  engine_analyser.rs  linreg.rs  mod.rs  results.rs
trace-archiver-db/src/consumer/: mod.rs
trace-archiver-db/src/engine/: error.rs  error_reporter.rs  framedata.rs  influxdb.rs  mod.rs  tdengine.rs  tdengine_login.rs  tdengine_views.rs
trace-archiver-db/src/redpanda_engine/: mod.rs
trace-archiver-db/src/simulator/: mod.rs
trace-archiver-hdf5/: Cargo.toml  README.md  default.nix
trace-archiver-hdf5/src/: continuous.rs  control.rs  main.rs
trace-archiver-hdf5/src/file/: base.rs
trace-archiver-tdengine/: Cargo.toml  README.md  default.nix  trace-archiver-db.ipynb
trace-archiver-tdengine/src/: error.rs  full_test.rs  main.rs
trace-archiver-tdengine/src/tdengine/: error.rs  error_reporter.rs  framedata.rs  influxdb.rs  mod.rs  tdengine.rs  tdengine_login.rs  tdengine_views.rs  views.rs  wrapper.rs
trace-reader/: Cargo.toml  README.md  Readme.md  default.nix
trace-reader/src/: lib.rs  loader.rs  main.rs  processing.rs  run_commands.rs
trace-server/: Cargo.toml  default.nix  style.css
trace-server/src/: cli_structs.rs  lib.rs  main.rs
trace-server/style/: output.css
trace-simulator/: Cargo.toml  default.nix
trace-simulator/src/: generator.rs  lib.rs
trace-telemetry-adapter/: Cargo.toml
trace-to-events/: Cargo.toml  Containerfile  README.md  default.nix
trace-to-events/src/: channels.rs  main.rs  metrics.rs  parameters.rs  processing.rs  timer.rs
trace-to-pulses/: Cargo.toml  README.md
trace-to-pulses/src/: lib.rs  ode.rs  partition.rs  pulse.rs  tracedata.rs
trace-viewer/: Cargo.toml  Containerfile  README.md  default.nix  index.html
trace-viewer/src/: cli_structs.rs  lib.rs  main.rs  structs.rs
trace-viewer/style/: broker_info.scss  containers.scss  controls.scss  output.css  output.scss  results.scss  root.scss  statusbar.scss  topbar.scss  trace_graph.scss
(+447 files in other folders)
