[workspace]
resolver = "2"
members = [
  "common",
  "diagnostics",
  "digitiser-aggregator",
  "nexus-writer",
  "simulator",
  "streaming-types",
  "trace-archiver-hdf5",
  "trace-archiver-tdengine",
  "trace-reader",
  "trace-telemetry-exporter",
  "trace-to-events",
]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.26.1"
flatbuffers = "25.1.24"
glob = "0.3.2"
hdf5 = { package = "hdf5-metno", version = "0.9.4", features = ["static"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
ndarray = "0.16.1"
num = "0.4.3"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["trace", "tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = ["trace", "rt-tokio"] }
rand = "0.8.5"
rand_distr = "0.4.3"
ratatui = "0.22.0"
rayon = "1.10.0"
rdkafka = { version = "0.31.0", features = ["cmake-build", "ssl", "gssapi", "sasl"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.138" }
supermusr-common = { path = "./common" }
supermusr-streaming-types = { path = "./streaming-types" }
taos = { version = "0.10.27", default-features = false, features = ["ws"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync"] }
thiserror = "1.0.69"
tracing = "0.1.41"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "env-filter"] }
