[workspace]
resolver = "2"
members = [
  "common",
  "diagnostics",
  "digitiser-aggregator",
  "nexus-writer",
  "simulator",
  "streaming-types",
  "trace-reader",
  "trace-telemetry-exporter",
  "trace-to-events",
  "trace-viewer",
  "trace-viewer-tui",
]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2024"

[workspace.dependencies]
cfg-if = { version = "1" }
actix-files = { version = "0.6" }
actix-web = { version = "4", features = ["macros"] }
console_error_panic_hook = { version = "0.1" }
leptos = { version = "0.8.4", features = ["tracing"] }
leptos_meta = { version = "0.8.4" }
leptos_actix = { version = "0.8.4" }
leptos_reactive = { version = "0.6.15" }
leptos_router = { version = "0.8.4", default-features = false }
leptos-use = { version = "0.16.2", features = ["use_interval"] }
plotly = { version = "0.13.5" }
uuid = { version = "1.17", features = ["v4"] }
wasm-bindgen = { version = "0.2.100" }

anyhow = "1.0.98"
assert_approx_eq = "1.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive", "env", "cargo", "string"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
flatbuffers = "25.2.10"
glob = "0.3.2"
hdf5 = { package = "hdf5-metno", version = "0.10.1", features = ["static"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
miette = "7.6.0"
ndarray = "0.16.1"
num = "0.4.3"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["trace", "tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = ["trace", "rt-tokio"] }
plotters = { version = "0.3.7", default-features = false, features = ["plotters-svg", "svg_backend", "bitmap_encoder", "all_series", "bitmap_backend"] }
rand = "0.9.2"
rand_distr = "0.5.1"
ratatui = "0.29.0"
rayon = "1.10.0"
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl", "gssapi", "sasl", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.142" }
strum = { version = "0.27.2", features = ["derive"] }
supermusr-common = { path = "./common" }
supermusr-streaming-types = { path = "./streaming-types" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "sync"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "env-filter"] }
tui-input = { version = "0.12.1", features = ["crossterm"], default-features = false }
