[package]
name = "supermusr-common"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kagiyama.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rdkafka.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true