[package]
name = "digitiser-aggregator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
