[package]
name = "digitiser-aggregator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
