[package]
name = "events-to-histogram"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
flatbuffers = "22.9.29"
kagiyama = "0.2.0"
lazy_static = "1.4.0"
log = "0.4"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
prometheus-client = "0.19"
rdkafka = { version = "0.29", features = ["cmake-build", "ssl-vendored", "gssapi-vendored", "sasl"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
chrono = "0.4.22"
