[package]
name = "events-to-histogram"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
kagiyama.workspace = true
lazy_static.workspace = true
log.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rdkafka.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
