[package]
name = "events-to-histogram"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
chrono.workspace = true
