[package]
name = "frame-assembler"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
streaming-types = { path = "../streaming-types" }

anyhow = "1.0"
chrono = "0.4.19"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
flatbuffers = "2.*"
log = "0.4"
rdkafka = { version = "0.28", features = ["cmake-build", "ssl-vendored", "gssapi-vendored", "sasl"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
toml = "0.5"
