[package]
name = "kafka-daq-report"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.26.1"
env_logger.workspace = true
log.workspace = true
ratatui = "0.22.0"
rdkafka.workspace = true
tokio.workspace = true
