[package]
name = "kafka-daq-report"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.27.0"
env_logger.workspace = true
hdf5.workspace = true
lazy_static.workspace = true
log.workspace = true
ndarray.workspace = true
ratatui = "0.23.0"
rdkafka.workspace = true
tokio.workspace = true
