[package]
name = "kafka-daq-report"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
streaming-types.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
log.workspace = true
ratatui.workspace = true
rdkafka.workspace = true
tokio.workspace = true
