[package]
name = "live-plot"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
streaming-types = { path = "../streaming-types" }

anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
plotters = { version = "0.3.2", default-features = false, features = ["all_series"] }
plotters-backend = { version = "0.3.2" }
rdkafka = { version = "0.28", features = ["cmake-build", "ssl-vendored", "gssapi-vendored", "sasl"] }
tokio = { version = "1.17", features = ["full"] }
