[package]
name = "nexus-writer"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
hdf5.workspace = true
kagiyama.workspace = true
lazy_static.workspace = true
log.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
