[package]
name = "nexus-writer"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hdf5.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ndarray.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
# unwrap_used = "deny"  TODO
