[package]
name = "simulator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
serde_json = "1.0.113"
serde.workspace = true
noise = "0.8.2"
rand_distr = "0.4.3"