[package]
name = "simulator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
panic = "deny"
# unwrap_used = "deny"  TODO
