[package]
name = "stream-to-file"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hdf5.workspace = true
kagiyama.workspace = true
lazy_static.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
