[package]
name = "supermusr-streaming-types"
version.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
flatc-rust = "*"

[dependencies]
chrono.workspace = true
flatbuffers.workspace = true
thiserror.workspace = true

[lints.clippy]
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
