[package]
name = "tdengine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
kagiyama.workspace = true

itertools = "0.11.0"
flatbuffers = "23.5.26"
rand = "0.8.5"
taos = { version = "0.10.16", default_features = false, features = ["ws"] }
async-trait = "0.1.68"
dotenv = "0.15.0"

[dev-dependencies]
serde = "1.0.164"
trace-simulator = { path = "../trace-simulator" }