[package]
name = "trace-archiver-db"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }
trace-simulator = { path = "../trace-simulator" }
tdengine = { path = "../tdengine" }

linregress = { version = "0.5.1", optional = true }
itertools = "0.11.0"
rand = "0.8.5"
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
flatbuffers = "22.9.29"
kagiyama = "0.3.0"
log = "0.4"
taos = { version = "0.8.15", default_features = false, features = ["native"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.68"
dotenv = "0.15.0"
redpanda = "0.5.0"

[dev-dependencies]
serde = "1.0.164"

[features]
#default = []
default = ["benchmark"]
benchmark = ["dep:linregress"]