[package]
name = "trace-archiver-db"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }
trace-simulator = { path = "../trace-simulator" }
tdengine = { path = "../tdengine" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
kagiyama.workspace = true
tokio.workspace = true


itertools = "0.11.0"
flatbuffers = "23.5.26"
linregress = { version = "0.5.3", optional = true }
rand = "0.8.5"
clap = { version = "4.4.5", features = ["derive", "env"] }
# Need to figure out why ResultSet::deserialize() is causing an error to update to the latest taos
#taos = { version = "0.10.16", default_features = false, features = ["ws"] }
async-trait = "0.1.68"
dotenv = "0.15.0"
redpanda = "0.5.0"

[dev-dependencies]
serde = "1.0.164"

[features]
#default = []
default = ["benchmark"]
benchmark = ["dep:linregress"]