[package]
name = "trace-archiver-db"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }
tdengine = { path = "../tdengine" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
kagiyama.workspace = true
tokio.workspace = true
rdkafka.workspace = true


async-trait = "0.1.68"
itertools = "0.11.0"
linregress = { version = "0.5.3", optional = true }
rand = "0.8.5"
clap = { version = "4.4.5", features = ["derive", "env"] }
dotenv = "0.15.0"

[dev-dependencies]
serde = "1.0.164"

[features]
#default = []
default = ["benchmark"]
benchmark = ["dep:linregress"]