[package]
name = "trace-archiver-hdf5"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hdf5.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
# panic = "deny"  TODO
unwrap_used = "deny"
