[package]
name = "trace-archiver-tdengine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
kagiyama.workspace = true
tokio.workspace = true
rdkafka.workspace = true


async-trait = "0.1.68"
clap = { version = "4.4.5", features = ["derive", "env"] }
dotenv = "0.15.0"
itertools = "0.11.0"
rand = "0.8.5"
taos = { version = "0.10.16", default_features = false, features = ["ws"] }

[dev-dependencies]
serde = "1.0.164"

[features]
default = ["benchmark"]
benchmark = []