[package]
name = "trace-archiver-tdengine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
rdkafka.workspace = true
async-trait = "0.1.68"
itertools = "0.11.0"
taos = { version = "0.10.16", default_features = false, features = ["ws"] }