[package]
name = "trace-archiver-tdengine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
taos.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
# TODO
# unwrap_used = "deny"
