[package]
name = "trace-reader"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
panic = "deny"
unwrap_used = "deny"
