[package]
name = "trace-server"
version.workspace = true
license.workspace = true
edition.workspace = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
#axum = { version = "0.8.4", optional = true }
#actix-web = { version = "4.11.0" }
#leptos_actix = { version = "0.8.2", optional = true }
#leptos_axum = { version = "0.8.2", optional = true }
leptos = { version = "0.8.2", features = [ "csr" ] }
leptos_meta = { version = "0.8.2" }
#leptos_router = { version = "0.8.2" }
#wasm-bindgen = { version = "0.2.100" }
console_error_panic_hook = { version = "0.1" }

#anyhow = { workspace = true, optional = true }
miette.workspace = true
chrono = { workspace = true, optional = false }
clap = { workspace = true, optional = false }
#plotters = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = false }
serde = { workspace = true, optional = false }
serde_json = { workspace = true, optional = false }
strum = { workspace = true, optional = false }
supermusr-common = { workspace = true, optional = false }
supermusr-streaming-types = { workspace = true, optional = false }
#tokio = { workspace = true, optional = false }
thiserror = { workspace = true, optional = false }
tracing = { workspace = true, optional = false }