[package]
name = "trace-server"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[features]
hydrate = [
  "leptos/hydrate"
]
ssr = [
  "leptos/ssr",
  "dep:tokio",
  "dep:rdkafka",
  "dep:clap",
  "dep:strum",
  "dep:supermusr-common",
  "dep:supermusr-streaming-types",
  "dep:console_error_panic_hook"
]

[dependencies]
leptos = { version = "=0.7.0" }
leptos_meta = { version = "=0.7.0" }
#leptos_router = { version = "0.8.2" }
wasm-bindgen = { version = "=0.2.95", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

miette.workspace = true
chrono = { workspace = true, optional = false }
clap = { workspace = true, optional = true }
#plotters = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
supermusr-common = { workspace = true, optional = true }
supermusr-streaming-types = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true, optional = false }
tracing = { workspace = true, optional = false }

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "Trace Viewer"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false