[package]
name = "trace-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
kagiyama.workspace = true


itertools = "0.11.0"
flatbuffers = "23.5.26"
rand = "0.8.5"
dotenv = "0.15.0"

[dev-dependencies]
serde = "1.0.164"
