[package]
name = "trace-to-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
streaming-types.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
itertools.workspace = true
kagiyama.workspace = true
lazy_static.workspace = true
log.workspace = true
rayon.workspace = true
rdkafka.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
