[package]
name = "trace-to-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
kagiyama.workspace = true
lazy_static.workspace = true
num.workspace = true
rayon.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
chrono.workspace = true
rand.workspace = true
