[package]
name = "trace-to-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
num.workspace = true
rayon.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
chrono.workspace = true
rand.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
# panic = "deny"  TODO
# unwrap_used = "deny"  TODO
