[package]
name = "trace-to-pulses"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common"}

num = "0.4.1"
optimization = "0.2.0"
itertools = "0.11.0"
rand = "0.8.5"
anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
dotenv = "0.15.0"
nalgebra = "0.32.2"
lstsq = "0.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
serde.workspace = true

[features]
#default = []
