[package]
name = "trace-viewer"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
plotters.workspace = true
ratatui.workspace = true
rdkafka.workspace = true
strum.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tui-input.workspace = true
